--- a/frontend/src/components/navBar/NavBar.css
+++ b/frontend/src/components/navBar/NavBar.css
@@ -9,7 +9,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-top: 40px;
+  margin-top: 24px;
   /* position: fixed; */
   top: 0;
   z-index: 1;
@@ -17,6 +17,9 @@ nav {
 
 img {
   /* Caso for preciso editar as proporções da imagem */
+  width: 13rem;
+  height: 4.rem;
+  /* object-fit: cover; */
 }
 
 .botoes-principais ul {
@@ -30,8 +33,8 @@ img {
 .botoes-principais a {
   text-decoration: none;
   color: #444452;
-  font-size: 39px;
-  padding: 100px;
+  font-size: 20px;
+  padding: 50px;
   transition: all 0.3s ease-out;
   text-transform: uppercase;
 }
@@ -41,7 +44,7 @@ img {
 
 .botoes-principais a:focus,
 .botoes-principais a:valid {
-  font-size: 50px;
+  font-size: 23px;
   margin-top: 0;
   color: black;
 }
