mudando nome cadastro

--- a/frontend/src/pages/estoque/cadastro/CadastroStyled.css
+++ b/frontend/src/pages/estoque/cadastro/CadastroStyled.css
@@ -65,7 +65,7 @@ h1 {
     color: #4038a0;
 }
 
-.buttons {
+.buttonz {
     background-color: transparent;
     border-color: #272262;
     color: #0614bd;
